#7 Prevent scrollbars from appearing on the home screen when items wiggle, and prevent popups from wiggling

--- a/app/static/styles/index.css
+++ b/app/static/styles/index.css
@@ -24,6 +24,8 @@ body {
     text-align: center;
     opacity: 0;
     transition: opacity 1s ease-in-out;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 header {
@@ -95,9 +97,9 @@ li.selected {
 }
 
 li.selected a .image {
-    width: 18rem;
-    height: 18rem;
-    border-radius: 9rem;
+    width: 16rem;
+    height: 16rem;
+    border-radius: 8rem;
     outline: 4px solid #e66465;
     margin-left: auto;
     margin-right: auto;
@@ -222,6 +224,9 @@ h3 {
     background-color: rgba(40, 40, 40, 0.9);
     z-index: -1;
     transition: opacity 0.3s;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
 }
 
 .info-modal .container {
@@ -233,7 +238,8 @@ h3 {
     padding: 4rem;
     border-radius: 0.25rem;
     text-align: left;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .container .image {
